--- a/main.css
+++ b/main.css
@@ -43,8 +43,7 @@ a{
 }
 button{
     color: hsl(0, 0%, 98%);
-    padding: 15px 35px;
-    
+    padding: 15px 35px;    
     border-radius: 50px;
     border: none;
     background: hsl(12, 88%, 59%);
@@ -185,11 +184,12 @@ footer a{
     padding-top: 60px;
 }
 .footer-menu{
-   justify-content: space-between;
+  justify-content: space-between;
 }
 footer p, footer button{
     font-size: 0.8rem;
-    font-weight: lighter;
+    font-weight: lighter;  
+      
 }
 input{
     border-radius: 25px;
@@ -197,4 +197,12 @@ input{
     height: 40px;
     width: 200px;
     border: none;
+}
+.footer-form{
+    margin-top: -10px;   
+    position: relative;
+    left: 90px;     
+}
+.footer-form p{
+    margin-top: 50px;
 }
