--- a/main.css
+++ b/main.css
@@ -24,7 +24,11 @@ a{
     text-decoration: none;
     display: block;
     color: hsl(228, 39%, 23%);
-    font-size: small;    
+    font-size: small;   
+    cursor: pointer; 
+}
+a:hover{
+    color: hsl(227, 12%, 61%);
 }
 .nav-menu, .social, .footer-menu{
     display: flex;
@@ -50,6 +54,10 @@ button{
     font-size: small;  
     box-shadow: 0px 15px hsl(12, 88%, 59%, 7%);   
     margin-top: 20px;
+    cursor: pointer;
+}
+button:hover{
+    opacity: 0.8;
 }
 h1{  
     font-size: 3rem;     
@@ -175,9 +183,19 @@ footer{
     color:hsl(0, 0%, 98%);
     height: fit-content;
 }
+
 footer a{
     color:hsl(0, 0%, 98%);
     padding: 6px;      
+}
+footer a:hover{
+    color: hsl(12, 88%, 59%);
+}
+svg path:hover{
+    fill: hsl(12, 88%, 59%);
+}
+img svg path:hover{
+    fill: hsl(12, 88%, 59%);
 }
 .social{
     padding-left: 12px;
@@ -197,6 +215,7 @@ input{
     height: 40px;
     width: 200px;
     border: none;
+    color:  hsl(12, 88%, 59%);  
 }
 .footer-form{
     margin-top: -10px;   
@@ -204,5 +223,10 @@ input{
     left: 90px;     
 }
 .footer-form p{
-    margin-top: 50px;
+    padding-top: 10px;
+}
+#form-message{
+    color: hsl(12, 88%, 59%);
+    position: relative;
+    top: -20px;
 }
