--- a/main.css
+++ b/main.css
@@ -130,7 +130,7 @@ li p{
 .section-three{  
     display: flex;
     flex-direction: column;    
-    margin-top: 300px;
+    margin-top: 150px;
     align-items: center;
 }
 .slide img{
@@ -146,7 +146,7 @@ h3{
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
     position: relative;
     left: 360px;
 }
@@ -332,8 +332,8 @@ input{
         margin-top: 0px;
     }
     .slider{
-        
-        left: -185px;
+        -webkit-overflow-scrolling: touch;
+        left: 185px;
         
     }
     .slide{
