mobile design finished

--- a/main.css
+++ b/main.css
@@ -14,10 +14,12 @@ body, .container{
 nav div, footer div{
     width: 33%;
 }
+nav{
+    height: 0px;
+}
 nav, footer{
     display: flex;
-    flex-direction: row;
-    height: 0px;
+    flex-direction: row;    
     padding: 50px 160px;   
 }
 a{
@@ -238,9 +240,9 @@ input{
         flex-direction: column;
         padding: 25px;         
     }
- nav{
-     padding: 30px;     
- }   
+    nav{
+         padding: 30px;     
+    }   
     .nav-img-logo{
         width:110px;
     }
@@ -354,5 +356,32 @@ input{
     }
     footer{
         flex-direction: column-reverse;
+    }
+    footer div{
+        width: 100%;
+    }
+    footer button{
+        margin: 0px;
+    }
+    .footer-form{
+        left: 10px
+    }
+    .social{
+        padding-bottom: 50px;
+    }
+    .footer-div-first{
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: stretch;
+        padding-bottom: 100px;
+    }
+    .footer-menu{
+        padding-left: 50px;
+    }
+    #footer-copy{
+        position: relative;
+        top: 400px;
+        left: 50px;
     }
 }
