--- a/main.css
+++ b/main.css
@@ -47,8 +47,15 @@ a:hover{
     top: -600px;
     left: 350px;
 }
-.nav-hamburger{
-display: none;
+.nav-hamburger, .nav-close{
+    position: relative;
+    top:-290px;
+    left: 260px; 
+    display: none;
+    z-index: 2;
+}
+.nav-bg-menu{
+    display: none;
 }
 button{
     color: hsl(0, 0%, 98%);
@@ -249,6 +256,31 @@ input{
     .nav-menu, .nav-button{
         display: none;
     }    
+    .nav-menu{
+        background-color: white;
+        padding: 50px 90px;
+        text-align: center;
+        position: absolute;
+        top: 80px;
+        left: 40px;
+        z-index: 3;       
+    }
+    .nav-bg-menu{
+        position: absolute;
+        top: -30px;
+        left: 0px;
+        width: 375px;
+        height: 850px;
+        background-color: hsl(227, 12%, 61%);       
+        background-image: linear-gradient(white 5%, black);
+        opacity: 0.6;
+        z-index: 1;
+    }
+    .nav-menu a{
+        display: block;
+        padding: 10px;
+        font-weight: bold;
+    }
     .nav-bg-mobile{
         width: 450px;
         height: auto;       
@@ -264,9 +296,7 @@ input{
     }
     .nav-hamburger{        
         display: inherit;
-        position: relative;
-        top:-290px;
-        left: 260px;        
+              
     }
     /****SECTION ONE***/    
     .section-one{
