Added some coments

--- a/main.css
+++ b/main.css
@@ -152,6 +152,9 @@ h3{
     margin-left: -100px;
     display: inline-block;
 }
+/*SLIDER -  it is very important, that we define width, and now we can see whole slider.
+overflow-x: auto showing scroll bar, but on responsive scroll bar still exist, and I have to move it.
+If we want to overflow works , we have to define height of element. Element have to be block or flex.*/
 .slider{
     display: flex;   
     flex-wrap: nowrap;
@@ -364,7 +367,10 @@ input{
     .section-three{       
         margin-top: 0px;
     }
-    .slider{          
+    .slider{ 
+        /*slide efekat achieved with change left position, 
+        but we could also  make this effekte with transform:translateX(375px), it is better solution when 
+        we use swipe on mobile instead onclick . */         
         left: 185px;  
         transition: 2s; 
         overflow-x: hidden;     
